--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build Maven package
         run: mvn clean package -DskipTests
 
-      # 4️⃣ Log in to Docker Hub
+      # 4️⃣ Log in to Docker Hub_
       - name: Docker Hub Login
         uses: docker/login-action@v2
         with:
