--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Calculator App to Kubernetes
 on:
   push:
     branches:
-      - master   # triggers on push to main
+      - master
 
 jobs:
   build-and-deploy:
@@ -25,7 +25,7 @@ jobs:
       - name: Build Maven package
         run: mvn clean package -DskipTests
 
-      # 4️⃣ Log in to Docker Hub_
+      # 4️⃣ Docker Hub login
       - name: Docker Hub Login
         uses: docker/login-action@v2
         with:
