--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -16,9 +16,10 @@ jobs:
 
       # 2️⃣ Set up Java
       - name: Set up Java 24
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: '24'
+          distribution: "temurin"
 
       # 3️⃣ Build Maven project
       - name: Build Maven package
