--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -31,6 +31,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Verify DockerHub Secrets
+        run: |
+          echo "DockerHub Username: ${{ secrets.DOCKERHUB_USERNAME }}"
+          echo "DockerHub Token length: ${#DOCKERHUB_TOKEN}"
+        env:
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
       # 5️⃣ Build Docker image with Git SHA tag
       - name: Build Docker image
