Refactoring workflow config

--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Build Maven package
         run: mvn clean package -DskipTests
 
+      # 4️⃣ Verify DockerHub Secrets (debug)
       - name: Verify DockerHub Secrets
         run: |
           echo "DockerHub Username: ${{ secrets.DOCKERHUB_USERNAME }}"
@@ -32,42 +33,42 @@ jobs:
         env:
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 4️⃣ Docker Hub login
+      # 5️⃣ Docker Hub login
       - name: Docker Hub Login
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 5️⃣ Build Docker image with Git SHA tag
+      # 6️⃣ Build Docker image with Git SHA tag
       - name: Build Docker image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/calculator:${{ github.sha }} .
 
-      # 6️⃣ Push Docker image to Docker Hub
+      # 7️⃣ Push Docker image to Docker Hub
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/calculator:${{ github.sha }}
 
-      # 7️⃣ Set up kubectl
+      # 8️⃣ Set up kubectl
       - name: Set up kubectl
         uses: azure/setup-kubectl@v3
         with:
           version: 'v1.29.0'
 
-      # 8️⃣ Configure Kubeconfig
+      # 9️⃣ Configure Kubeconfig (fixed)
       - name: Configure Kubeconfig
         run: |
-          echo "${{ secrets.KUBECONFIG_DATA }}" | base64 -d > kubeconfig
-          export KUBECONFIG=$(pwd)/kubeconfig
-      # 9️⃣ Debug Kubernetes Setup
+          mkdir -p $HOME/.kube
+          echo "${{ secrets.KUBECONFIG_DATA }}" | base64 -d > $HOME/.kube/config
+
+      # 🔎 Debug Kubernetes Setup
       - name: Debug Kubernetes Setup
         run: |
           kubectl config view
           kubectl cluster-info
 
-      # 9️⃣ Update Kubernetes Deployment
+      # 🔄 Update Kubernetes Deployment
       - name: Update Kubernetes Deployment
         run: |
           kubectl set image deployment/calculator-deployment \
-          calculator=${{ secrets.DOCKERHUB_USERNAME }}/calculator:${{ github.sha }} \
-          --record
+          calculator=${{ secrets.DOCKERHUB_USERNAME }}/calculator:${{ github.sha }}
           kubectl rollout status deployment/calculator-deployment
