Added the Amazon credentials

--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -48,6 +48,23 @@ jobs:
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/calculator:${{ github.sha }}
 
+      # 7️⃣ Configure AWS credentials
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      # 8️⃣ Update kubeconfig for EKS
+      - name: Update kubeconfig
+        run: aws eks update-kubeconfig --name my-eks-cluster --region ${{ secrets.AWS_REGION }}
+
+      # 9️⃣ Verify cluster access
+      - name: Verify access
+        run: kubectl get nodes
+
+
       # 8️⃣ Set up kubectl
       - name: Set up kubectl
         uses: azure/setup-kubectl@v3
